[package]
name = "dewpoint"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use a askama release when https://github.com/djc/askama/issues/524 is fixed
askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama.git" }
celes = "2"
chrono = "0.4.19"
ip2location = "0.1.5"
#ip2location = { git = "https://github.com/wezm/rust-ip2location.git", branch = "accept-ipaddr" }
reqwest = { version = "0.11.5", default-features = false, features = ["rustls-tls", "json"] }
rocket = { version = "0.5.0-rc.1", features = [] }
serde_json = "1"
tokio = "1"
