[package]
name = "dewpoint"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use a askama release when https://github.com/djc/askama/issues/524 is fixed
askama = { git = "https://github.com/djc/askama.git", features = ["with-rocket"] }
askama_rocket = { git = "https://github.com/djc/askama.git" }
celes = "2"
chrono = { version = "0.4.24", default-features = false, features = ["std", "clock"] }
ip2location = "0.3.5"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json"] }
rocket = { version = "0.5.0", features = [] }
serde_json = "1"
